test/src/main/webapp/WEB-INF/view/error/baseobjectexception.jsp
<%@ page contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
<!DOCTYPE html>
<html>
<head>
    <title>Errorpage - base object</title>
</head>
<body>
<h3> The object you are trying to delete is the base object, or the base object has not been assigned yet.
    Please assign a new base object first!</h3>
<h1></h1>
<a href="/tariffs">Tariffs</a>
<a href="/options">Options</a>
</body>
</html>
